덱으로 고쳐서 풀어보셈